--- a/#src/scss/module/tippy/svg-arrow.scss
+++ b/#src/scss/module/tippy/svg-arrow.scss
@@ -1,5 +1,5 @@
 .tippy-box[data-placement^=top]>.tippy-svg-arrow {
-  bottom: 1px
+  bottom: 7px
 }
 
 .tippy-box[data-placement^=top]>.tippy-svg-arrow:after,
